# PythonCourse

./: .gitignore  pyproject.toml
hw_1/: nl.py  run_tests.sh  tail.py  wc.py
hw_1/artifacts/: nl.txt  tail.txt  wc.txt
hw_1/samples/: 1.txt  2.txt  3.txt
hw_2/: Dockerfile  task_1.py
hw_2/artifacts/: README.md  image.tex  table.tex
hw_2/latex_generator/: __init__.py  core.py  generator.py  utils.py
hw_3/: task_1.py  task_2.py  task_3.py
hw_3/artifacts/hw_3_1/: matrix+.txt  matrix@.txt  matrix.txt
hw_3/artifacts/hw_3_3/: AB.txt  B.txt  CD.txt
hw_3/matrix/: core.py
hw_3/matrix_with_hash/: core.py  file_mixin.py  hash_mixin.py
hw_3/matrix_with_mixins/: __init__.py  core.py  mixins.py
hw_4/: integrate.py  task_1.py  task_2.py
hw_4/artifacts/: task_1.txt  task_2.md
hw_5/: task_1.py
hw_5/artifacts/: task_1.txt
