[tool.poetry]
name = "pythoncourse"
version = "0.1.0"
description = ""
authors = ["Anastasiia Ostapchuk <ostapchuk.anastasiia.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-core = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
