[tool.poetry]
name = "pythoncourse"
version = "0.1.0"
description = ""
authors = ["Anastasiia Ostapchuk <ostapchuk.anastasiia.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-core = "^2.1.2"
latex-generator-itmo-aniciya = "^0.2.0"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
aiohttp = "^3.11.18"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
